--- a/Librerie/CMakeLists.txt
+++ b/Librerie/CMakeLists.txt
@@ -3,4 +3,4 @@ set(LIBRERIE_SRC #Non sono riuscito a farlo funzionare...
     libreria_principale.c
     libreria_principale.h
 )
-add_library(Librerie STATIC libreria_principale.c libreria_principale.h) #aggiungere i file src delle varie librerie
+add_library(Librerie STATIC libreria_principale.c libreria_principale.h File.h File.c) #aggiungere i file src delle varie librerie
